<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/navigate_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Set and navigate back" />

    <Button
        android:id="@+id/trigger_event_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Trigger event and navigate back" />

    <Button
        android:id="@+id/store_serializable_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Store serializable item and navigate back" />

</LinearLayout>
